--- a/client/src/pages/Login/index.scss
+++ b/client/src/pages/Login/index.scss
@@ -12,6 +12,7 @@
       padding: 20px 0px;
       width: 500px;
       margin-top: 150px;
+      margin-left: -90px;
       .ant-form-item-label > label {
         color: #fafafa;
       }
